--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,8 @@ spring.application.name=dashboard-service
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 
 zuul.routes.casemanagement.path=/case/**
-zuul.routes.catalogservice.serviceId=case-management
+zuul.routes.casemanagement.serviceId=case-management
+
+zuul.routes.animalgroupregistration.path=/animalGroup/**
+zuul.routes.animalgroupregistration.serviceId=animal-group-registration
+
